<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">
        <EditText
            android:id="@+id/et_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:layout_weight="2"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/code"
            android:layout_weight="2"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        android:drawableLeft="@drawable/ic_sms"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/btn_check_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_code"
        android:drawableLeft="@drawable/ic_check_sms"
        android:drawablePadding="5dp"
        android:enabled="false"/>

    <Button
        android:id="@+id/btn_resend_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_sms"
        android:drawableLeft="@drawable/ic_resend_sms"
        android:drawablePadding="5dp"
        android:enabled="false"/>

</LinearLayout>